--- a/src-2.0/manifest.json
+++ b/src-2.0/manifest.json
@@ -1,12 +1,12 @@
 {
 	"manifest_version": 2,
-	"name": "Make It Red",
-	"version": "2.0",
-	"description": "Makes everything red",
-	"homepage_url": "https://github.com/zotero/make-it-red",
+	"name": "CCF-Class for 7",
+	"version": "0.1",
+	"description": "A CCF badge plugin for zotero 7",
+	"homepage_url": "https://github.com/mythezone/ccf-plugin",
 	"applications": {
 		"zotero": {
-			"id": "make-it-red@example.com",
+			"id": "ccf-plugin@mythezone.com",
 			"update_url": "https://zotero-download.s3.amazonaws.com/tmp/make-it-red/updates-2.0.json",
 			"strict_min_version": "6.999",
 			"strict_max_version": "7.0.*"
